--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,18 @@ before_install:
 
 script:
   - docker run ksganesh/docker-react npm run test -- --coverage
-  
+
+deploy:
+  provider: elasticbeanstalk
+  region:  "ap-south-1"
+  app: "React"
+  env: "React-env"
+  bucket_name: "elasticbeanstalk-ap-south-1-899884035939"
+  bucket_path: "React"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
+
 
